<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivityStudent" >
    <item android:id="@+id/site"
        android:title="@string/action_site"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/update"
        android:title=""
        android:orderInCategory="0"
        android:showAsAction="always"
        android:icon="@drawable/update_icon"/>
    <item android:id="@+id/add"
        android:title=""
        android:orderInCategory="0"
        android:showAsAction="always"
        android:icon="@drawable/add_icon"/>
    <item android:id="@+id/aboutProject"
        android:title="@string/action_aboutProject"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/aboutAuthors"
        android:title="@string/action_aboutAuthors"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/help"
        android:title="@string/action_help"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/contacts"
        android:title="@string/action_contacts"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/action_logout"
        android:orderInCategory="6"
        app:showAsAction="never"/>
</menu>
